# tauro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  build-ui.ps1  build-ui.sh  dev.ps1  dev.sh  diagram.dot  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
core/: README.md  pyproject.toml
core/tauro/: __init__.py
core/tauro/api/: README.md  __init__.py  auth.py  client.py  config.py  deps.py  main.py  models.py  security.py  services.py  utils.py
docs/: DATABRICKS_SETUP.md  DEVELOPMENT.md  FEATURE_STORE_MODES.md  LIBRARY_USAGE.md  MIGRATION_GUIDE.md  README.md  best_practices.rst  changelog.rst  cli_usage.rst  conf.py  configuration.rst  contributing.rst  databricks_setup.rst  feature_store.rst  getting_started.rst  glossary.rst  how_tauro_works.rst  index.rst  installation.rst  library_usage.rst  license.rst  migration_guide.rst  quick_reference.rst  requirements.txt
docs/_static/: custom.css
docs/advanced/: architecture.rst  performance.rst  security.rst  testing.rst  troubleshooting.rst
docs/api/: index.rst  reference.rst
docs/guides/: troubleshooting.rst
docs/tutorials/: airflow_integration.rst  batch_etl.rst  fastapi_integration.rst  index.rst  mlops.rst  streaming.rst
engine/: __init__.py
engine/cli/: __init__.py  cli.py  config.py  core.py  execution.py  template.py  validators.py
engine/config/: __init__.py  context_loader.py  contexts.py  exceptions.py  interpolator.py  loaders.py  providers.py  session.py  validators.py
engine/exec/: README.md  __init__.py  commands.py  dependency_resolver.py  executor.py  ml_node_validator.py  mlflow_node_executor.py  mlops_auto_config.py  mlops_executor_mixin.py  mlops_integration.py  node_executor.py  pipeline_state.py  pipeline_validator.py  resilience.py  resource_pool.py
engine/io/: __init__.py  base.py  constants.py  context_manager.py  factories.py  input.py  output.py  readers.py  sql.py  validators.py  writers.py
engine/mlops/: __init__.py  base.py  concurrency.py  config.py  exceptions.py  experiment_tracking.py  factory.py  health.py  locking.py  mlflow_utils.py  model_registry.py  resilience.py  storage.py  transaction.py  validators.py
engine/streaming/: __init__.py  exceptions.py  pipeline_manager.py  query_manager.py  readers.py  validators.py  writers.py
src/: README.md
src/core/: __init__.py
tauro/: README.md  __init__.py  pyproject.toml
tauro/api/: README.md  main.py
tauro/cli/: README.md  __init__.py  cli.py  config.py  core.py  execution.py  template.py  validators.py
tauro/common/: __init__.py  config_interface.py  constants.py
tauro/core/: __init__.py
tauro/docs/: ENVIRONMENT.md
tauro/ui/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
(+540 files in other folders)
